--- a/chat/templates/chat/home.html
+++ b/chat/templates/chat/home.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Simple chat</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    {% comment %} <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> {% endcomment %}
 </head>
 
 <body>
@@ -21,11 +20,11 @@
     <div id="messages"></div>
 
     <script type='text/javascript'>
-        let url= `ws://${window.location.host}/ws/socket-sever/`;
-        const chatSocket = new WebSocket(url);
+        let url= `ws://${window.location.host}/ws/socket-sever/`
+        const chatSocket = new WebSocket(url)
         chatSocket.onmessage = function(e){
-            let data= JSON.parse(e.data);
-            console.log('Data: ',data);
+            let data= JSON.parse(e.data)
+            console.log('Data: ',data)
 
             if(data.type === 'chat'){
                 let messages = document.getElementById('messages')
@@ -33,19 +32,20 @@
                 messages.insertAdjacentHTML('beforeend', `<div>
                     <p>${data.message}</p>
                     </div>`)
-            };
-        };
+            }
+        }
 
         let form = document.getElementById('form')
         form.addEventListener('submit', (e)=> {
-            e.preventDefault();
-            let message = e.target.message.value ;
+            e.preventDefault()
+            let message = e.target.message.value 
             chatSocket.send(JSON.stringify({
                 'message':message,
             }))
-            form.reset();
-        });
+            form.reset()
+        })
 
     </script>
 
 </body>
+</html>
