--- a/chat/templates/chat/home.html
+++ b/chat/templates/chat/home.html
@@ -10,7 +10,7 @@
     <div id="messages"></div>
 
     <script type='text/javascript'>
-        let url= `ws://${window.location.host}/ws/socket-server/`
+        let url= `wss://${window.location.host}/ws/socket-server/`
         const chatSocket = new WebSocket(url)
         chatSocket.onmessage = function(e){
             let data= JSON.parse(e.data)
